--- a/lesson3/lesson3_2.ipynb
+++ b/lesson3/lesson3_2.ipynb
@@ -47,6 +47,110 @@
     "m *= 2\n",
     "m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# input涵式運用\n",
+    "value= int(input('請輸入整數'))\n",
+    "value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TYPE 顯示字串\n",
+    "type(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value1=float(input(\"請輸入浮點數\"))\n",
+    "type(value1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "矩形的面積是 16.7825 平方公分\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請輸入矩形的的寬, 高, 計算面積\n",
+    "width = float(input(\"請輸入寬\"))\n",
+    "height = float(input(\"請輸入高\"))\n",
+    "print(\"矩形的面積是\",width*height, \"平方公分\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的BMI 24.280975342840534\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請輸入身高(公分):請輸入體重(公斤):您的BMI:xxxxx\n",
+    "weight = float(input(\"請輸入體重\"))\n",
+    "height = float(input(\"請輸入身高\"))\n",
+    "print(\"您的BMI\",weight/height**2)\n"
+   ]
   }
  ],
  "metadata": {
