--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "220\n"
+      "輸入錯誤\n"
      ]
     }
    ],
@@ -102,12 +102,16 @@
     "#有些學生可以加分5%\n",
     "\n",
     "scores= int(input(\"請輸入學生分數(最高300):\"))\n",
-    "is_add=input(\"學生是否符合加分條件?(y,n):\")\n",
-    "if(is_add==\"y\"):\n",
-    "   scores *= 1.05\n",
-    "\n",
-    "print(round(scores))\n",
-    "\n"
+    "if scores <= 300:\n",
+    "   is_add=input(\"學生是否符合加分條件?(y,n):\")\n",
+    "   #巢狀判斷\n",
+    "   if(is_add==\"y\"):\n",
+    "      scores *= 1.05\n",
+    "      if scores>300:\n",
+    "           scores=300\n",
+    "   print(round(scores))\n",
+    "else: \n",
+    "    print(\"輸入錯誤\")\n"
    ]
   }
  ],
