--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -113,6 +113,76 @@
     "else: \n",
     "    print(\"輸入錯誤\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance=float(input(\"請輸入投射距離:\"))\n",
+    "if distance >=80:\n",
+    "    if distance <= 100:\n",
+    "        print(\"成功\")\n",
+    "    else:\n",
+    "        print(\"失敗\")\n",
+    "else:\n",
+    "    print(\"失敗\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成功\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance=float(input(\"請輸入投射距離:\"))\n",
+    "#使用邏輯運算子\n",
+    "if distance >=80 and distance <= 100:\n",
+    "        print(\"成功\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"失敗\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "失敗\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance=float(input(\"請輸入投射距離:\"))\n",
+    "#使用邏輯運算子\n",
+    "if distance <80 or distance > 100:\n",
+    "        print(\"成功\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"失敗\")"
+   ]
   }
  ],
  "metadata": {
