--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -86,32 +86,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入錯誤\n"
+      "請輸入數字\n"
      ]
     }
    ],
    "source": [
     "#學生總分為300\n",
+    "#檢查必須300分以內, 0分以上\n",
     "#有些學生可以加分5%\n",
-    "\n",
-    "scores= int(input(\"請輸入學生分數(最高300):\"))\n",
-    "if scores <= 300:\n",
-    "   is_add=input(\"學生是否符合加分條件?(y,n):\")\n",
-    "   #巢狀判斷\n",
-    "   if(is_add==\"y\"):\n",
-    "      scores *= 1.05\n",
-    "      if scores>300:\n",
-    "           scores=300\n",
-    "   print(round(scores))\n",
-    "else: \n",
-    "    print(\"輸入錯誤\")\n"
+    "#如果加分超過300, 就以300分為準\n",
+    "try:\n",
+    "   \n",
+    "   scores= int(input(\"請輸入學生分數(最高300):\"))\n",
+    "   if scores <= 300 and scores >=0:\n",
+    "      is_add=input(\"學生是否符合加分條件?(y,n):\")\n",
+    "      #巢狀判斷\n",
+    "      if(is_add==\"y\"):\n",
+    "         scores *= 1.05\n",
+    "         if scores>300:\n",
+    "            scores=300\n",
+    "      print(round(scores))\n",
+    "   else: \n",
+    "      print(\"輸入錯誤\")\n",
+    "except:\n",
+    "   print(\"請輸入數字\")\n"
    ]
   },
   {
