--- a/lesson4_3.ipynb
+++ b/lesson4_3.ipynb
@@ -33,23 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5050\n"
+      "1265\n"
      ]
     }
    ],
    "source": [
     "n = 0\n",
-    "for i in range(1,101):\n",
+    "i =int(input(\"請輸入起始數值\"))\n",
+    "k =int(input(\"請輸入結束數值\"))\n",
+    "for i in range(i, k+1):\n",
     "    n += i\n",
     "\n",
     "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while "
    ]
   }
  ],
