--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -76,6 +76,58 @@
     "    \n",
     "print(\"1~100的加總是\", total)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1~100的加總是 5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1 ~ 100的加總, While True break 無限迴圈寫法\n",
+    "\n",
+    "value = 1\n",
+    "total = 0\n",
+    "while True:\n",
+    "    total += value\n",
+    "    value += 1\n",
+    "    if value > 100: \n",
+    "        break\n",
+    "    \n",
+    "print(\"1~100的加總是\", total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taipei\n",
+      "Taiwan\n",
+      "Japan\n",
+      "程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    stuff = input(\"請輸入小寫英文字[按q會離開]:\")\n",
+    "    if stuff==\"q\":\n",
+    "       break\n",
+    "    print(stuff.capitalize ())\n",
+    "print(\"程式結束\")"
+   ]
   }
  ],
  "metadata": {
