--- a/lesson10/lesson10_3.ipynb
+++ b/lesson10/lesson10_3.ipynb
@@ -7,36 +7,20 @@
    "outputs": [],
    "source": [
     "import redis\n",
-    "redis_conn = redis.Redis.from_url('rediss://red-cmjj6tnqd2ns73bijc00:QRpuSypplThBWyLxOgr1BecnB6mTLxJ6@singapore-redis.render.com:6379')#連上redis server\n"
+    "redis_conn = redis.Redis.from_url('rediss://red-cmjj6tnqd2ns73bijc00:QRpuSypplThBWyLxOgr1BecnB6mTLxJ6@singapore-redis.render.com:6379')#連上redis server\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#儲存list\n",
     "name = \"游孟祥\"\n",
     "chinese = 78\n",
     "english = 92\n",
-    "math = 65\n",
-    "\n",
-    "redis_conn.rpush('stu:01',name)\n",
-    "redis_conn.rpush('stu:01',chinese)\n",
-    "redis_conn.rpush('stu:01',english)\n",
-    "redis_conn.rpush('stu:01',math)"
+    "math = 65"
    ]
   },
   {
@@ -56,56 +40,75 @@
     }
    ],
    "source": [
-    "name2 = \"張xx\"\n",
-    "chinese2 = 90\n",
-    "english2 = 98\n",
-    "math2 = 91\n",
-    "\n",
-    "redis_conn.rpush('stu:02',name2,chinese2,english2,math2)"
+    "redis_conn.hset('stu:01',\n",
+    "                mapping={\n",
+    "                    '姓名':name,\n",
+    "                    '中文':chinese,\n",
+    "                    '英文':english,\n",
+    "                    '數學':math\n",
+    "                })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'游孟祥'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "redis_conn.hget('stu:01','姓名').decode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "張xx\n",
-      "90\n",
-      "98\n",
-      "91\n"
+      "姓名 游孟祥\n",
+      "中文 78\n",
+      "英文 92\n",
+      "數學 65\n"
      ]
     }
    ],
    "source": [
-    "#取出list 的值\n",
-    "list1 = redis_conn.lrange('stu:02',0,3)\n",
-    "for item in list1:\n",
-    "    print(item.decode())"
+    "stu1 = redis_conn.hgetall('stu:01')\n",
+    "for (key,value) in stu1.items():\n",
+    "    print(key.decode(), value.decode())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "{'姓名': '游孟祥', '中文': '78', '英文': '92', '數學': '65'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "redis_conn.delete('stu:01')\n",
-    "redis_conn.delete('stu:02')\n"
+    "{key.decode():value.decode() for (key,value) in stu1.items()}"
    ]
   }
  ],
