--- a/UI/lesson12_1.ipynb
+++ b/UI/lesson12_1.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m      3\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://openapli-test.onrender.com/pico_w/?count=5\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      5\u001b[0m r \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url\u001b[38;5;241m=\u001b[39murl)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "下載成功\n",
+      "[{'date': '2024-1-24 16:32:53', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 44250.0}, {'date': '2024-1-24 16:37:11', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 46939.0}, {'date': '2024-1-24 16:37:17', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 45979.0}, {'date': '2024-1-24 16:39:4', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 39929.0}, {'date': '2024-1-24 16:39:11', 'address': 'chicken_KFC', 'temperature': 25.17182, 'light': 39961.0}]\n"
      ]
     }
    ],
@@ -29,6 +26,100 @@
     "    data = r.json()\n",
     "\n",
     "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>address</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>light</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-1-24 16:32:53</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>25.17182</td>\n",
+       "      <td>44250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-1-24 16:37:11</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>25.17182</td>\n",
+       "      <td>46939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-1-24 16:37:17</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>25.17182</td>\n",
+       "      <td>45979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-1-24 16:39:4</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>25.17182</td>\n",
+       "      <td>39929.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-1-24 16:39:11</td>\n",
+       "      <td>chicken_KFC</td>\n",
+       "      <td>25.17182</td>\n",
+       "      <td>39961.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date      address  temperature    light\n",
+       "0  2024-1-24 16:32:53  chicken_KFC     25.17182  44250.0\n",
+       "1  2024-1-24 16:37:11  chicken_KFC     25.17182  46939.0\n",
+       "2  2024-1-24 16:37:17  chicken_KFC     25.17182  45979.0\n",
+       "3   2024-1-24 16:39:4  chicken_KFC     25.17182  39929.0\n",
+       "4  2024-1-24 16:39:11  chicken_KFC     25.17182  39961.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame(data)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
